tests/harness/errors/168_io_shell_missing_cmd.eu
# io.shell with no cmd field should produce a clear error, not a panic
` { target: :main requires-io: true }
main: io.shell({ stdin: "ignored" })
